[package]
name = "my-rust-and-python-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "my_project"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.19.0"
features = ["abi3-py37"]
